// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GlobalStytles /> Should be global styles ready  1`] = `
.c0 {
  font-size: 1.25rem;
  text-align: center;
  font-family: "Didact Gothic",sans-serif;
  -webkit-letter-spacing: 0.25rem;
  -moz-letter-spacing: 0.25rem;
  -ms-letter-spacing: 0.25rem;
  letter-spacing: 0.25rem;
  padding-left: 1rem;
}

<h4
  className="c0"
/>
`;

exports[`<GlobalStytles/> Should be global styles ready  1`] = `
.c0 {
  font-size: 2.5rem;
  font-family: "Didact Gothic",sans-serif;
  text-align: center;
  -webkit-letter-spacing: 0.25rem;
  -moz-letter-spacing: 0.25rem;
  -ms-letter-spacing: 0.25rem;
  letter-spacing: 0.25rem;
}

<h2
  className="c0"
/>
`;

exports[`<GlobalSytles/> Should be global styles ready  1`] = `
.c0 {
  font-size: 3.12rem;
  font-family: "Didact Gothic",sans-serif;
}

<h1
  className="c0"
/>
`;
